Backend/Solution Items/K8S/profiles-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profilesservice
  template:
    metadata:
      labels:
        app: profilesservice
    spec:
      containers:
        - name: profilesservice
          image: localhost:9870/profiles:latest
